Fix navbar spacing
Increase spacing between text and divider line of main content

--- a/_sass/jekyll-theme-hacker.scss
+++ b/_sass/jekyll-theme-hacker.scss
@@ -99,6 +99,7 @@ header h2 {
   // width: 20%;
   //margin: 0px 0 0 20px;
   padding-top: 10px;
+  padding-right: 20px;
   padding-left: 20px;
   border-bottom: 1px dashed $conifer;
   flex-grow: 1;
